[tool.poetry]
name = "sln-manager-cli"
version = "0.1.0"
description = ""
authors = ["Nikhil Ketkar <nmketkar@gmail.com>"]
readme = "README.md"
packages = [{include = "sln_manager_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
simple-term-menu = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

